# granite

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  consistent_hash_ring.cc  consistent_hash_ring.h  feature_store.proto  feature_store_router.cc  feature_store_server.cc  read_file.cc  read_file.h  setup_local_certs.sh
examples/: get_feature.sh  put_feature.sh
