# MODULE.bazel

module(
    name = "feature_store",
    version = "0.1.0"
)

# Tells bazel module depends on gRPC
# Should find it in the Bazel central Registry
bazel_dep(name = "grpc", version = "1.72.0")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rocksdb", version="9.11.2")
bazel_dep(name = "rules_proto", version = "7.1.0")


bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(name = "rules_apple", version = "4.1.2")
single_version_override(
    module_name = "rules_apple",
    version = "4.1.2",
)

bazel_dep(name = "rules_cc", version = "0.2.0")
single_version_override(
    module_name = "rules_cc",
    version = "0.2.0",
)

bazel_dep(name = "grpc-java", version = "1.71.0")
single_version_override(
    module_name = "grpc-java",
    version = "1.71.0",
)

bazel_dep(name = "rules_jvm_external", version = "6.0")
single_version_override(
    module_name = "rules_jvm_external",
    version = "6.0",
)
